template in router

--- a/spa framework test/index.html
+++ b/spa framework test/index.html
@@ -12,7 +12,13 @@
 <body ng-app="app">
 
 <!--this will be the global header that will be shown on all pages-->
-<div id="header"></div>
+<div id="header">
+	
+	<a href="#/">Main Page</a>
+	<br>
+	<a href="#/second">Second Page</a>
+
+</div>
 	
 	<!--this will be the container for all the pages you write-->
 	<!--any html files you put in the views folder will be inserted inside of this <div> tag when the app is running-->
