--- a/spa cordova project/spaCordovaApp/www/index.html
+++ b/spa cordova project/spaCordovaApp/www/index.html
@@ -5,8 +5,17 @@
 
 	<script src= "js/angular.min.js"></script>
 	<script src= "js/angular-route.min.js"></script>
+	<script src= "js/jquery-2.1.3.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
-
+	<script>
+		var data = $.ajax({
+		  dataType: "json",
+		  url: "js/data.json",
+		  success: function(){
+		  	data = data.responseJSON;
+		  }
+		});
+	</script>
 </head>
 
 <body ng-app="app">
