--- a/spa cordova project/spaCordovaApp/www/index.html
+++ b/spa cordova project/spaCordovaApp/www/index.html
@@ -8,11 +8,15 @@
 	<script src= "js/jquery-2.1.3.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script>
+		var pieces = [];
 		var data = $.ajax({
 		  dataType: "json",
 		  url: "js/data.json",
 		  success: function(){
-		  	data = data.responseJSON;
+		  	$.each(data.responseJSON,function(){
+		  		pieces.push(this);
+		  	})
+		  	data.destroy;
 		  }
 		});
 	</script>
