--- a/spa cordova project/spaCordovaApp/www/index.html
+++ b/spa cordova project/spaCordovaApp/www/index.html
@@ -16,7 +16,6 @@
 		  	$.each(data.responseJSON,function(){
 		  		pieces.push(this);
 		  	})
-		  	data.destroy;
 		  }
 		});
 	</script>
@@ -29,6 +28,7 @@
 	<h3><a href="#/explore">Explore</a></h3>
 	<h3><a href="#/gallery">Gallery</a></h3>
 	<h3><a href="#/map">Map</a></h3>
+	<h3><a href="#/new">New</a></h3>
 
 	<div ng-view></div>
 
