--- a/davidow/platforms/android/assets/www/index.html
+++ b/davidow/platforms/android/assets/www/index.html
@@ -42,41 +42,9 @@
 	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 	
 	<script>
-		//Stylesheets on load
 		if (localStorage.onboarding == "notShown"){
 			window.location.hash = "/onBoarding"
 			localStorage.setItem("onboarding","shown");
-		}
-		if(localStorage.theme == "light"){
-			var headID = document.getElementsByTagName("head")[0];
-			var cssNode = document.createElement('link');
-			cssNode.type = 'text/css';
-			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/masterLight.css';
-			cssNode.media = 'screen';
-			headID.appendChild(cssNode);
-			var headID = document.getElementsByTagName("head")[0];
-			var cssNode = document.createElement('link');
-			cssNode.type = 'text/css';
-			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/stylesBlue.css';
-			cssNode.media = 'screen';
-			headID.appendChild(cssNode);
-		}else{
-			var headID = document.getElementsByTagName("head")[0];
-			var cssNode = document.createElement('link');
-			cssNode.type = 'text/css';
-			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/master.css';
-			cssNode.media = 'screen';
-			headID.appendChild(cssNode);
-			var headID = document.getElementsByTagName("head")[0];
-			var cssNode = document.createElement('link');
-			cssNode.type = 'text/css';
-			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/stylesYellow.css';
-			cssNode.media = 'screen';
-			headID.appendChild(cssNode);
 		}
 		//Desktop testing for beacons
 		function onRange(foo)
@@ -119,6 +87,7 @@
 		  }
 		});
 		//Click and swipe events
+		/*
 		$(document).ready(function(){
 			var h = $("html")[0];
 			var close = Hammer(h,{threshold: 4, velocity:.1}).on("swipeleft", function() {
@@ -130,33 +99,39 @@
 			$("#dropdown-menu a").click(function(){$("#dropdown-menu").hide()});
 			$("#close-btn").click(function(){$("#dropdown-menu").hide()});
 			$("#menu-btn").click(function(){$("#dropdown-menu").show()});
-
 		});
-
+		*/	
 	</script>
 	<!--Style Sheets-->
 	<link href='http://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>
-	<!--<link rel="stylesheet" href="css/master.css">
-	<link rel="stylesheet" href="css/stylesBlue.css">-->
+	<link rel="stylesheet" href="css/masterLight.css">
+	<link rel="stylesheet" href="css/stylesBlue.css">
 </head>
 <body ng-app="app">
+
+	<!--side menu-->
 	<div id="dropdown-menu" class="accelerate">
-		<h2><a href="#/explore">EXPLORE</a></h2>
-		<!--<h2><a href="#/map">MAP</a></h2>-->
-		<h2><a href="#/gallery">LIST VIEW</a></h2>
-		<h2><a href="#/tileView">TILE VIEW</a></h2>
-		<!--<h2><a href="#/about">ABOUT</a></h2>-->
-		<h2><a href="#/tutorial">TUTORIAL</a></h2>
-		<h2><a href="#/settings">SETTINGS</a></h2>
-		<div id="close-btn">
-		<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-		</div>
+		<a href="#/explore">
+			<div class="temp-icon"></div>			
+		</a>
+		<a href="#/gallery">
+			<div class="temp-icon"></div>			
+		</a>
+		<a href="#/tileView">
+			<div class="temp-icon"></div>			
+		</a>
+		<a href="#/about">
+			<div class="temp-icon"></div>			
+		</a>
 	</div>
+
+	<!--page content injected here-->
 	<div ng-view id="view-container" class="center"></div>
+	
 	<div id="bottom-notification">
 	</div>
 </body>
-<div id="menu-btn">
+<!--<div id="menu-btn">
 	<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-</div>
+</div>-->
 </html>
