--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -64,7 +64,7 @@ daynightCycle();
 			window.location.hash = "/onBoarding"
 			localStorage.setItem("onboarding","shown");
 		}
-		/*if(localStorage.theme == "light"){
+		if(localStorage.theme == "light"){
 			var headID = document.getElementsByTagName("head")[0];
 			var cssNode = document.createElement('link');
 			cssNode.type = 'text/css';
@@ -94,7 +94,7 @@ daynightCycle();
 			cssNode.href = 'css/stylesYellow.css';
 			cssNode.media = 'screen';
 			headID.appendChild(cssNode);
-		}*/
+		}
 		//Desktop testing for beacons
 		function onRange(foo)
 		{
