--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="davidow/www/css/bootstrap.css">
 
 	<meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />	
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
 	<!--First we load the cordova script, then we load index to take care of initializing the estimotes-->
 	<script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="davidow/www/js/index.js"></script>
 
 	<!--jquery & angular scripts are loaded before any other scripts that depend on them-->
-	<script src="js/jquery-2.1.3.js"></script>
-	<script src="js/angular.min.js"></script>
+	<script src="davidow/www/js/jquery-2.1.3.js"></script>
+	<script src="davidow/www/js/angular.min.js"></script>
 
 	<!--Routing and animations-->
-	<script src="js/angular-route.min.js"></script>	
-	<script src= "js/angular-animate.min.js"></script>	
+	<script src="davidow/www/js/angular-route.min.js"></script>
+	<script src= "davidow/www/js/angular-animate.min.js"></script>
 
 	<!--Angular-Isotope scripts-->
-	<script src="js/jquery.isotope.js"></script>
-	<script src="js/angular-isotope.js"></script>
+	<script src="davidow/www/js/jquery.isotope.js"></script>
+	<script src="davidow/www/js/angular-isotope.js"></script>
 	<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
 	<script src="http://pc035860.github.io/angular-highlightjs/angular-highlightjs.min.js"></script>
-	
+
 	<!--Our app controllers-->
-	<script src="js/app.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="davidow/www/js/app.js"></script>
+	<script src="davidow/www/js/bootstrap.min.js"></script>
 
 	<!--Estimotes and touch events-->
-	<script src= "js/screen-range-beacons.js"></script>
-	<script src= "js/hammer.min.js"></script>	
-	<script src= "js/localStorage.js"></script>	
+	<script src= "davidow/www/js/screen-range-beacons.js"></script>
+	<script src= "davidow/www/js/hammer.min.js"></script>
+	<script src= "davidow/www/js/localStorage.js"></script>
 
 	<!--angular isotope style sheets might need for testing
 	<link rel="stylesheet" href="css/isotopetest/main.css"/>
@@ -40,7 +40,7 @@
 
 	<!--twitter-->
 	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-	
+
 	<script>
  /* function daynightCycle(){
       var currentTime = new Date().getHours();
@@ -69,14 +69,14 @@ daynightCycle();*/
 			var cssNode = document.createElement('link');
 			cssNode.type = 'text/css';
 			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/masterLight.css';
+			cssNode.href = 'davidow/www/css/masterLight.css';
 			cssNode.media = 'screen';
 			headID.appendChild(cssNode);
 			var headID = document.getElementsByTagName("head")[0];
 			var cssNode = document.createElement('link');
 			cssNode.type = 'text/css';
 			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/stylesBlue.css';
+			cssNode.href = 'davidow/www/css/stylesBlue.css';
 			cssNode.media = 'screen';
 			headID.appendChild(cssNode);
 		}else{
@@ -84,14 +84,14 @@ daynightCycle();*/
 			var cssNode = document.createElement('link');
 			cssNode.type = 'text/css';
 			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/master.css';
+			cssNode.href = 'davidow/www/css/master.css';
 			cssNode.media = 'screen';
 			headID.appendChild(cssNode);
 			var headID = document.getElementsByTagName("head")[0];
 			var cssNode = document.createElement('link');
 			cssNode.type = 'text/css';
 			cssNode.rel = 'stylesheet';
-			cssNode.href = 'css/stylesYellow.css';
+			cssNode.href = 'davidow/www/css/stylesYellow.css';
 			cssNode.media = 'screen';
 			headID.appendChild(cssNode);
 		}
@@ -114,7 +114,7 @@ daynightCycle();*/
 		var pieces = [];
 		var data = $.ajax({
 		  dataType: "json",
-		  url: "js/data.json",
+		  url: "davidow/www/js/data.json",
 		  success: function(){
 		  	$.each(data.responseJSON,function(){
 				//todo: add a placeholder image if there wasnt a url
