--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; url=http://davidowproject.github.io/davidow/www/index.html" />
+	<meta http-equiv="refresh" content="0; url=http://davidowproject.github.io/code/davidow/www/index.html" />
 </head>
 </html>
