--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -33,7 +33,7 @@
 
 	<script>
 		//Stylesheets on load
-		if (localStorage.onboarding == "notShown"){
+		/*(localStorage.onboarding == "notShown"){
 			window.location.hash = "/onBoarding"
 			localStorage.setItem("onboarding","shown");
 		}
@@ -67,9 +67,10 @@
 			cssNode.href = 'css/stylesYellow.css';
 			cssNode.media = 'screen';
 			headID.appendChild(cssNode);
-		}
+		}*/
 		//Desktop testing for beacons
-		function onRange(foo)
+		
+        function onRange(foo)
 		{
 			$(".beacon").hide();
 			var c;
@@ -126,8 +127,8 @@
 	</script>
 	<!--Style Sheets-->
 	<link href='http://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>
-	<!--<link rel="stylesheet" href="css/master.css">
-	<link rel="stylesheet" href="css/stylesBlue.css">-->
+	<link rel="stylesheet" href="css/masterLight.css">
+	<link rel="stylesheet" href="css/stylesBlue.css">
 </head>
 <body ng-app="app">
 	<div id="dropdown-menu" class="accelerate">
