--- a/davidow/platforms/android/assets/www/index.html
+++ b/davidow/platforms/android/assets/www/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />	
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
 	<!--First we load the cordova script, then we load index to take care of initializing the estimotes-->
 	<script type="text/javascript" src="cordova.js"></script>
@@ -16,38 +16,61 @@
 	<script src="js/angular.min.js"></script>
 
 	<!--Routing and animations-->
-	<script src="js/angular-route.min.js"></script>	
-	<script src= "js/angular-animate.min.js"></script>	
+	<script src="js/angular-route.min.js"></script>
+	<script src= "js/angular-animate.min.js"></script>
 
-	<!--Angular-Isotope scripts-->
-	<script src="js/jquery.isotope.js"></script>
-	<script src="js/angular-isotope.js"></script>
-	<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
-	<script src="http://pc035860.github.io/angular-highlightjs/angular-highlightjs.min.js"></script>
-	
 	<!--Our app controllers-->
 	<script src="js/app.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 
 	<!--Estimotes and touch events-->
 	<script src= "js/screen-range-beacons.js"></script>
-	<script src= "js/hammer.min.js"></script>	
-	<script src= "js/localStorage.js"></script>	
-
-	<!--angular isotope style sheets might need for testing
-	<link rel="stylesheet" href="css/isotopetest/main.css"/>
-	<link rel="stylesheet" href="css/isotopetest/style.css"/>-->
+	<script src= "js/hammer.min.js"></script>
+	<script src= "js/localStorage.js"></script>
 
 	<!--twitter-->
 	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-	
+
 	<script>
-		if (localStorage.onboarding == "notShown"){
+		//Stylesheets on load
+		/*(localStorage.onboarding == "notShown"){
 			window.location.hash = "/onBoarding"
 			localStorage.setItem("onboarding","shown");
 		}
+		if(localStorage.theme == "light"){
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/masterLight.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/stylesBlue.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+		}else{
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/master.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/stylesYellow.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+		}*/
 		//Desktop testing for beacons
-		function onRange(foo)
+		
+        function onRange(foo)
 		{
 			$(".beacon").hide();
 			var c;
@@ -87,7 +110,6 @@
 		  }
 		});
 		//Click and swipe events
-		/*
 		$(document).ready(function(){
 			var h = $("html")[0];
 			var close = Hammer(h,{threshold: 4, velocity:.1}).on("swipeleft", function() {
@@ -99,39 +121,34 @@
 			$("#dropdown-menu a").click(function(){$("#dropdown-menu").hide()});
 			$("#close-btn").click(function(){$("#dropdown-menu").hide()});
 			$("#menu-btn").click(function(){$("#dropdown-menu").show()});
+
 		});
-		*/	
+
 	</script>
 	<!--Style Sheets-->
 	<link href='http://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/masterLight.css">
-	<link rel="stylesheet" href="css/stylesBlue.css">
+    
+    <link rel="stylesheet" href="css/masterLight.css">
+    <link rel="stylesheet" href="css/stylesBlue.css">
+	
 </head>
 <body ng-app="app">
-
-	<!--side menu-->
 	<div id="dropdown-menu" class="accelerate">
-		<a href="#/explore">
-			<div class="temp-icon"></div>			
-		</a>
-		<a href="#/gallery">
-			<div class="temp-icon"></div>			
-		</a>
-		<a href="#/tileView">
-			<div class="temp-icon"></div>			
-		</a>
-		<a href="#/about">
-			<div class="temp-icon"></div>			
-		</a>
+		<h2><a href="#/explore">EXPLORE</a></h2>
+		<h2><a href="#/gallery">LIST VIEW</a></h2>
+		<h2><a href="#/tileView">TILE VIEW</a></h2>
+		<h2><a href="#/tutorial">TUTORIAL</a></h2>
+		<h2><a href="#/settings">SETTINGS</a></h2>
+		<h2><a href="#/about">ABOUT</a></h2>
+		<div id="close-btn">
+		<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+		</div>
 	</div>
-
-	<!--page content injected here-->
 	<div ng-view id="view-container" class="center"></div>
-	
 	<div id="bottom-notification">
 	</div>
 </body>
-<!--<div id="menu-btn">
+<div id="menu-btn">
 	<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-</div>-->
+</div>
 </html>
