--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -42,6 +42,42 @@
 	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 	<script>
+		//Stylesheets on load
+		/*(localStorage.onboarding == "notShown"){
+			window.location.hash = "/onBoarding"
+			localStorage.setItem("onboarding","shown");
+		}
+		if(localStorage.theme == "light"){
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/masterLight.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/stylesBlue.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+		}else{
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/master.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+			var headID = document.getElementsByTagName("head")[0];
+			var cssNode = document.createElement('link');
+			cssNode.type = 'text/css';
+			cssNode.rel = 'stylesheet';
+			cssNode.href = 'css/stylesYellow.css';
+			cssNode.media = 'screen';
+			headID.appendChild(cssNode);
+		}*/
 		//Desktop testing for beacons
 		
         function onRange(foo)
@@ -101,8 +137,10 @@
 	</script>
 	<!--Style Sheets-->
 	<link href='http://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/masterLight.css">
     
+    <link rel="stylesheet" href="css/masterLight.css">
+    <link rel="stylesheet" href="css/stylesBlue.css">
+	
 </head>
 <body ng-app="app">
 	<!--<div id="dropdown-menu" class="accelerate">
