--- a/davidow/platforms/android/assets/www/index.html
+++ b/davidow/platforms/android/assets/www/index.html
@@ -19,6 +19,12 @@
 	<script src="js/angular-route.min.js"></script>
 	<script src= "js/angular-animate.min.js"></script>
 
+	<!--Angular-Isotope scripts-->
+	<script src="js/jquery.isotope.js"></script>
+	<script src="js/angular-isotope.js"></script>
+	<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
+	<script src="http://pc035860.github.io/angular-highlightjs/angular-highlightjs.min.js"></script>
+
 	<!--Our app controllers-->
 	<script src="js/app.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -32,6 +38,7 @@
 	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 	<script>
+
 		//Desktop testing for beacons
 		
         function onRange(foo)
@@ -91,8 +98,10 @@
 	</script>
 	<!--Style Sheets-->
 	<link href='http://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/masterLight.css">
     
+    <link rel="stylesheet" href="css/masterLight.css">
+    <link rel="stylesheet" href="css/stylesBlue.css">
+	
 </head>
 <body ng-app="app">
 	<!--<div id="dropdown-menu" class="accelerate">
@@ -107,8 +116,6 @@
 		</div>
 	</div>-->
 	<div ng-view id="view-container" class="center"></div>
-	<div id="bottom-notification">
-	</div>
 </body>
 <!--<div id="menu-btn">
 	<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
