--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -92,7 +92,10 @@
 			$("#dropdown-menu a").click(function(){$("#dropdown-menu").hide()});
 			$("#close-btn").click(function(){$("#dropdown-menu").hide()});
 			$("#menu-btn").click(function(){$("#dropdown-menu").show()});
-
+			$(".nav-icon").click(function(){
+				$(".active-nav").removeClass("active-nav");
+				$(this).addClass("active-nav");
+			})
 		});
 
 	</script>
@@ -103,27 +106,20 @@
     <link rel="stylesheet" href="css/stylesBlue.css">
 	
 </head>
+
+<!--screens injected here-->
 <body ng-app="app">
-	<!--<div id="dropdown-menu" class="accelerate">
-		<h2><a href="#/explore">EXPLORE</a></h2>
-		<h2><a href="#/gallery">LIST VIEW</a></h2>
-		<h2><a href="#/tileView">TILE VIEW</a></h2>
-		<h2><a href="#/tutorial">TUTORIAL</a></h2>
-		<h2><a href="#/settings">SETTINGS</a></h2>
-		<h2><a href="#/about">ABOUT</a></h2>
-		<div id="close-btn">
-		<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-		</div>
-	</div>-->
 	<div ng-view id="view-container" class="center"></div>
 </body>
-<!--<div id="menu-btn">
-	<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-</div>-->
+
+<!--nav-->
 <div class="bottom-nav ng-scope">
-    <a href="#/explore"><img src="img/explore.png"></a>
-    <a href="#/map"><img src="img/map.png"></a>
-    <a href="#tileView"><img src="img/gallery.png"></a>
-    <a href="#/settings"><img src="img/settings.png"></a>
-    </div>
+    <a href="#/explore"><img class="nav-icon active-nav" src="img/explore.png"></a>
+    <a href="#/map"><img class="nav-icon" src="img/map.png"></a>
+    <a href="#tileView"><img class="nav-icon" src="img/gallery.png"></a>
+</div>
+<style>
+	.nav-icon{-webkit-filter:brightness(100);}
+	.active-nav{-webkit-filter:none !important;}	
+</style>
 </html>
