--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -18,6 +18,7 @@
 	<!--Routing and animations-->
 	<script src="js/angular-route.min.js"></script>
 	<script src= "js/angular-animate.min.js"></script>
+    <script src="js/angular-sanitize.min.js"></script>
 
 	<!--Angular-Isotope scripts-->
 	<script src="js/jquery.isotope.js"></script>
@@ -59,7 +60,7 @@
 		var pieces = [];
 		var data = $.ajax({
 		  dataType: "json",
-		  url: "js/data.json",
+		  url: "js/davidow.json",
 		  success: function(){
 		  	$.each(data.responseJSON,function(){
 				//todo: add a placeholder image if there wasnt a url
@@ -100,7 +101,7 @@
 
 	</script>
 	<!--Style Sheets-->
-	<link href='http://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
     
     <link rel="stylesheet" href="css/masterLight.css">
     <link rel="stylesheet" href="css/stylesBlue.css">
