--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -119,8 +119,23 @@
     <a href="#/map"><img class="nav-icon" src="img/map.png"></a>
     <a href="#tileView"><img class="nav-icon" src="img/gallery.png"></a>
 </div>
+    
+    <button class="menu-btn"></button>
 <style>
 	.nav-icon{-webkit-filter:brightness(100);}
-	.active-nav{-webkit-filter:none !important;}	
+	.active-nav{-webkit-filter:none !important;}
+    .menu-btn{
+                height: 4.5em;
+    width: 4.5em;
+    background: url(img/icon.png)57% no-repeat;
+    border-radius: 50%;
+    background-size: 46%;
+    position: fixed;
+    background-color: #3b3c3e;
+    bottom: 5.5em;
+    right: 1em;
+    box-shadow: 3px 3px 6px -2px rgba(7,7,7,0.5);
+        border:none;
+    }
 </style>
 </html>
