--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -127,9 +127,9 @@
     .menu-btn{
                 height: 4.5em;
     width: 4.5em;
-    background: url(img/icon.png)57% no-repeat;
+    background: url(img/davidow-icon-alt.png)57% no-repeat;
     border-radius: 50%;
-    background-size: 46%;
+    background-size: 51%;
     position: fixed;
     background-color: #3b3c3e;
     bottom: 5.5em;
