--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -114,22 +114,24 @@
 </body>
 
 <!--nav-->
-<!--<div class="bottom-nav ng-scope">
+<div class="bottom-nav ng-scope">
     <a href="#/explore"><img class="nav-icon active-nav" src="img/explore.png"></a>
     <a href="#/map"><img class="nav-icon" src="img/map.png"></a>
     <a href="#tileView"><img class="nav-icon" src="img/gallery.png"></a>
-</div>-->
-    <div class="circle-nav-container">
-    <button class="menu-btn" id="cn-button"></button>
-        <div class="circle-nav-wrapper" id="circle-nav-wrapper">
-    <ul>
-        <li><a href="#/gallery"><span><img class="nav-icon active-nav circle-nav" src="img/gallery-alt.png"></a></span></li>
-        <li><a href="#/explore"><span><img class="nav-icon active-nav circle-nav" src="img/binoculars-alt.png"></a></span></li>
-        <!--<li><a href="#/map"><img class="nav-icon" src="img/map.png"></a></li>
-        <li><a href="#/tileView"><img class="nav-icon" src="img/gallery.png"></a></li>-->
-        </ul>
-        </div>
+</div>
+
+<!--
+<div class="circle-nav-container">
+<button class="menu-btn" id="cn-button"></button>
+    <div class="circle-nav-wrapper" id="circle-nav-wrapper">
+<ul>
+    <li><a href="#/gallery"><span><img class="nav-icon active-nav circle-nav" src="img/gallery-alt.png"></a></span></li>
+    <li><a href="#/explore"><span><img class="nav-icon active-nav circle-nav" src="img/binoculars-alt.png"></a></span></li>
+    </ul>
     </div>
+</div>
+-->
+
 <style>
 	.nav-icon{-webkit-filter:brightness(100);}
 	.active-nav{-webkit-filter:none !important;}
