--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -115,9 +115,9 @@
 
 <!--nav-->
 <div class="bottom-nav ng-scope">
-    <a href="#/explore"><img class="nav-icon active-nav" src="img/explore.png"></a>
+    <a href="#/explore"><img class="nav-icon" src="img/explore.png"></a>
     <a href="#/map"><img class="nav-icon" src="img/map.png"></a>
-    <a href="#tileView"><img class="nav-icon" src="img/gallery.png"></a>
+    <a href="#tileView"><img class="nav-icon active-nav" src="img/gallery.png"></a>
 </div>
 
 <!--
