--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -111,7 +111,20 @@
 
 		}
 		
-		
+		//get data from server
+		var pieces = [];
+		var data = $.ajax({
+			dataType: "json",
+			url: "http://davidow.atec.io/api/getAllPieces.php",
+			success: function(){
+				$.each(data.responseJSON,function(){
+					pieces.push(this);
+				})
+			}
+		})
+
+
+	/*
 		//Data setup
 		var pieces = [];
 		var data = $.ajax({
@@ -119,7 +132,6 @@
 		  url: "js/data.json",
 		  success: function(){
 		  	$.each(data.responseJSON,function(){
-				//todo: add a placeholder image if there wasnt a url
 		  		if(this.piece_image != "" && this.piece_image != undefined){
 		  			this.image_url = /http:.+?(?=.jpg)(....)/.exec(this.piece_image)[0];
 		  			this.thumb_url = this.piece_image.match(/image\d{1,2}.\d{3,4}x\d{3,4}..../g);
@@ -144,6 +156,7 @@
 			pieces.pop();
 		  }
 		});
+	*/
 		//Click and swipe events
 		$(document).ready(function(){
 			var h = $("html")[0];
