--- a/davidow/www/index.html
+++ b/davidow/www/index.html
@@ -35,7 +35,7 @@
 	<!--look for beacons-->
 	<script src="js/ranging.js"></script>	
 	<script>
-		//Click and swipe events
+		//Click events
 		$(document).ready(function(){
 			$("#hamburger").click(function(){
 				$("#side-menu").toggle();
