ux changes, about page

--- a/eddystone/www/index.html
+++ b/eddystone/www/index.html
@@ -47,6 +47,7 @@
                 $(this).addClass("active-nav");
             })
         }); 
+        eventSet = 0
     </script>
 
     <!--Style Sheets-->
@@ -61,7 +62,6 @@
 <nav>
     <div id="brand" class="pull-left">Davidow</div>
     <div class="pull-right">
-        <span id="filter-icon" class="glyphicon glyphicon-filter"></span>
         <span id="search-icon" class="glyphicon glyphicon-search"></span>
         <span id="hamburger" class="glyphicon glyphicon-menu-hamburger"></span>
     </div>
@@ -72,6 +72,7 @@
 <div id="side-menu">
     <a href="#/tileView">Gallery</a>
     <a href="#/map">Map</a>
+    <a href="#/about">About</a>
 </div>
 
 <!--screens injected here-->
